feat: add webapp block structure

--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
 
 <body>
     <div class="wrapper" id="app">
+        <div class="container">
+            <!-- app container -->
+            <div class="app-container">
+                <div class="boolzapp">
+                    <!-- chat list -->
+                    <div class="chat-list">
+                        <div class="chat-list__header"></div>
+                        <div class="chat-list__alert"></div>
+                        <div class="chat-list__input"></div>
+                        <div class="chat-list__chats"></div>
+                    </div>
+
+                    <!-- active chat -->
+                    <div class="active-chat">
+                        <div class="active-chat__header"></div>
+                        <div class="active-chat__body"></div>
+                        <div class="active-chat__input"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
