feat: add left section static content

--- a/index.html
+++ b/index.html
@@ -37,10 +37,51 @@
                 <div class="boolzapp">
                     <!-- chat list -->
                     <div class="chat-list">
-                        <div class="chat-list__header"></div>
-                        <div class="chat-list__alert"></div>
-                        <div class="chat-list__input"></div>
-                        <div class="chat-list__chats"></div>
+                        <!-- header -->
+                        <div class="chat-list__header">
+                            <!-- profile -->
+                            <div class="user-profile">
+                                <img src="./img/avatar_io.jpg">
+                                <span>Sofia</span>
+                            </div>
+                            <!-- controls -->
+                            <div class="user-controls">
+                                <span><i class="fa-solid fa-circle-notch"></i></span>
+                                <span><i class="fa-solid fa-message"></i></span>
+                                <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
+                            </div>
+                        </div>
+                        <!-- alert -->
+                        <div class="chat-list__alert">
+                            <div class="alert-icon">
+                                <i class="fa-solid fa-bell-slash"></i>
+                            </div>
+                            <div class="alert-text">
+                                <span>Ricevi notifiche di nuovi messaggi</span>
+                                <span>Attiva notifiche desktop</span>
+                            </div>
+                        </div>
+                        <!-- input -->
+                        <div class="chat-list__input">
+                            <div class="input-group flex-nowrap">
+                                <input type="text" class="form-control" placeholder="Cerca chat">
+                            </div>
+                        </div>
+                        <!-- chats -->
+                        <div class="chat-list__chats">
+                            <!-- chat preview -->
+                            <div class="chat-preview">
+                                <!-- preview img -->
+                                <div class="chat-preview__img">
+                                    <img src="./img/avatar_1.jpg">
+                                </div>
+                                <!-- preview text -->
+                                <div class="chat-preview__text">
+                                    <span class="preview-name">Michele</span>
+                                    <span class="preview-message">Ultimo messaggio inviato</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- active chat -->
