feat: add right section static content

--- a/index.html
+++ b/index.html
@@ -86,9 +86,58 @@
 
                     <!-- active chat -->
                     <div class="active-chat">
-                        <div class="active-chat__header"></div>
-                        <div class="active-chat__body"></div>
-                        <div class="active-chat__input"></div>
+                        <!-- header -->
+                        <div class="active-chat__header">
+                            <!-- active profile -->
+                            <div class="active-user-profile">
+                                <img src="./img/avatar_1.jpg">
+                                <div class="active-user-profile__text">
+                                    <span>Michele</span>
+                                    <span>Ultimo accesso oggi alle 12:00</span>
+                                </div>
+                            </div>
+                            <!-- controls -->
+                            <div class="active-user-controls">
+                                <span>
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </span>
+                                <span>
+                                    <i class="fa-solid fa-paperclip fa-lg"></i>
+                                </span>
+                                <span>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <!-- body -->
+                        <div class="active-chat__body">
+                            <div class="message sent">Hai portato a spasso il cane?
+                                <span class="msg-time">15:30</span>
+                            </div>
+                            <div class="message sent">Ricordati di stendere i panni!
+                                <span class="msg-time">15:50</span>
+                            </div>
+                            <div class="message received">Tutto fatto!
+                                <span class="msg-time">16:15</span>
+                            </div>
+                        </div>
+                        <!-- footer-->
+                        <div class="active-chat__footer">
+                            <!-- left -->
+                            <div class="footer-left">
+                                <i class="fa-regular fa-face-smile fa-lg"></i>
+                            </div>
+                            <!-- center / msg input -->
+                            <div class="footer-center">
+                                <div class="input-group flex-nowrap">
+                                    <input type="text" class="form-control" placeholder="Scrivi un messaggio">
+                                </div>
+                            </div>
+                            <!-- right -->
+                            <div class="footer-right">
+                                <i class="fa-solid fa-microphone fa-lg"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
