feat: add msg time in chat preview

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                                     <span class="preview-name">Michele</span>
                                     <span class="preview-message">Ultimo messaggio inviato</span>
                                 </div>
+                                <!-- msg time -->
+                                <span class="msg-time">12:00</span>
                             </div>
                         </div>
                     </div>
