--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolzapp Web</title>
 
+    <!-- LUXON 3.4.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.2/build/global/luxon.min.js" defer></script>
+
     <!-- FONTAWESOME 6.4.2-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -83,7 +86,11 @@
                                     <span class="preview-message">{{ contact.messages.at(-1).message }}</span>
                                 </div>
                                 <!-- msg time -->
-                                <span class="msg-time">12:00</span>
+                                <span class="msg-time">
+                                    {{
+                                    getTimeFromDate(contact.messages.at(-1).date)
+                                    }}
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -119,6 +126,9 @@
                                 :class="(message.status == 'sent') ? 'sent' : 'received'">
                                 <!-- message -->
                                 {{ message.message}}
+
+                                <!-- message time -->
+                                <span class="msg-time">{{getTimeFromDate(message.date)}}</span>
 
                                 <!-- dropdown -->
                                 <div class="dropdown">
