feat: add msg for empty chat (remove when new msg)

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <!-- body -->
                         <div class="active-chat__body">
                             <div v-for="(message, index) in contacts[activeChatIndex].messages" class="message"
-                                :class="(message.status == 'sent') ? 'sent' : 'received'">
+                                :class="(message.status)">
                                 <!-- message -->
                                 {{ message.message}}
 
